add change text button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TestApplicationForGitHub</string>
+    <string name="tv_hellow">Hellow World!</string>
+    <string name="btn_chenge">変更</string>
 </resources>
